# llm-zoomcamp-june-2026-homework

./: .gitignore  OpenAI Check.ipynb  README.md  agentic.ipynb  main.py  pyproject.toml
01-agentic-rag/: homework.ipynb
02-vector-search/: homework.py
