[project]
name = "llm-zoomcamp-2026-june"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
